2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/MusicFile.cs: Metadata is parsed in the base class

2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added a fixme
	* src/FileSystem.cs: Fixed infinite recursion ;)

2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Implemented metadata uploading/syncing and file downloading.
	* src/FileSystem.cs: Implemented file uploading
	* src/Files/GenericFile.cs, src/Files/MusicFile.cs, src/Files/ImageFile.cs:
	  Misc cosmetic changes

2007-09-18  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/ImageFile.cs: Added the supporting property code for the
	  ImageFile class

2007-09-18  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs, src/Files/GenericFile.cs, src/Files/MusicFile.cs,
	  src/Files/ImageFile.cs: Implemented metadata parsing/handling. The lib
	  can handle anything that is thrown at it
	* src/FileSystem.cs: Implemented nearly all the stubs.
	* src/Camera.cs: Added a fixme comment
	* libgphoto2-sharp.mdp: Added ref to System.XML

2007-09-16  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added a FileName property.
	* src/FileSystem.cs: Began implementing the stubs
	* src/Camera.cs: Implemented the FileSystem section

2007-09-16  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Abilities.cs: Removed old CWL.

2007-09-16  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-09-15  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-09-15  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Stubbed out the Download methods to get a file from an MTP
	  device
	* src/FileSystem.cs: Stubbed out the Upload method to send a file to an MTP
	  device

2007-09-15  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added some properties and methods which are common to all
	  files
	* src/Files/GenericFile.cs, src/Makefile.am, libgphoto2-sharp.mdp: Added
	  GenericFile class

2007-09-15  Alan McGovern <alan.mcgovern@gmail.com> 
