@@ -1,5 +1,10 @@
 2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 
 
+	* src/FileSystem.cs: Should be converting the string to byte[]
+	* src/Abilities.cs: Simplified the code
+
+2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 
+
 	* src/Files/MusicFile.cs: Metadata is parsed in the base class
 
 2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 
